src/snapshots/2ec__tests__demo_017.snap
---
source: src/main.rs
expression: ta.backend()
---
TestBackend {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 55, height: 26 },
        content: [
            "╭─────────────────────────────────╮╭──────────────────╮",
            "│                                 ││ memory registers │",
            "│                             4.00││                  │",
            "│DEC (10)                      dec││0: 0.00           │",
            "╰─────────────────────────────────╯│                  │",
            "╭─────────────────────────────────╮│1: 4.00           │",
            "│  number of significant digits   ││                  │",
            "│                                 ││2: 0.00           │",
            "│       0 1 2 3 4 5 6 7 8 9       ││                  │",
            "│                                 ││3: 0.00           │",
            "│                                 ││                  │",
            "│                                 ││4: 0.00           │",
            "│                                 ││                  │",
            "│                                 ││5: 0.00           │",
            "│                                 ││                  │",
            "│                                 ││6: 0.00           │",
            "│                                 ││                  │",
            "│                                 ││7: 0.00           │",
            "│                                 ││                  │",
            "│                                 ││8: 0.00           │",
            "│                                 ││                  │",
            "│                                 ││9: 0.00           │",
            "│                                 ││                  │",
            "│? help      ESC clear        quit││                  │",
            "╰─────────────────────────────────╯╰──────────────────╯",
            "                                                       ",
        ],
        styles: [
            x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 7, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 16, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 22, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 34, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        ]
    },
    scrollback: Buffer {
        area: Rect { x: 0, y: 0, width: 55, height: 0 }
    },
    cursor: false,
    pos: (
        0,
        0,
    ),
}
